cleared about page (big bio to be added)

--- a/about.html
+++ b/about.html
@@ -12,36 +12,15 @@
 <body>
         <div class = 'header'>
             <h1>Regan Willis</h1>
-            <h2>Programmer</h2>
+            <h2>PROGRAMMER & ARTIST</h2>
             <nav>
                 <ul><li><a href='index.html'>home</a></li></ul>
                 <ul><li><a href='#'>about</a></li></ul>
+                <ul><li><a href='writing.html'>writing</a></li></ul>
             </nav>
         </div>
-        <div class = 'content'>
-            <img src = 'https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/me.jpg'>
-            <h3>Bio</h3>
-            <p>
-                Regan Willis is a programmer and artist interested in using computers to create 
-                human connections and improve our relationships with our digital selves.
-            </p>
-            <p>
-                She is a Software Engineer at ASSET, LLC. where she works on healtcare technology
-                by augmenting internal systems, building web apps, and using machine
-                learning to find patterns in data.
-            </p>
-            <p>
-                Regan graduates from the University of South Carolina in 2021 with a Bachelor of Science 
-                in Computer Information Systems, a minor in Business Information Systems, a minor in 
-                Data Science, and an Information Assurance Specialization.
-            </p>
-        </div>
-        <div class = 'connect'>
-            <p>Connect with me:</p>
-            <p><a href='https://github.com/reganwillis'>GitHub</a></p>
-            <p><a href='https://twitter.com/reganwillis'>Twitter</a></p>
-            <p><a href='https://www.linkedin.com/in/regan-willis-software-developer/'>LinkedIn</a></p>
-            <p>Email me at reganwillis@outlook.com</p>
+        <div class='content'>
+            <br>
         </div>
         <div class = 'footer'>
             <p>Copyright Regan Willis 2020</p>
