--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class='index-images'>
                 <img src = 'https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/images/me.jpg'>
             </div>
+            <h3>View My <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/Willis_Resume.pdf' target="_blank" rel="noopener noreferrer">Resume</a></h3>
             <p>
                 Hi, I'm Regan. I'm a programmer and artist interested in using computers to create 
                 human connections and improve our relationships with our digital selves.
@@ -34,7 +35,7 @@
             </p>
             <p>
                 I will graduate from the University of South Carolina in May 2021 with a Bachelor of Science 
-                in Computer Information Systems, a minor in Business Information Systems and an Information Assurance Specialization.
+                in Computer Information Systems, a minor in Business Information Management and an Information Assurance Specialization.
             </p>
         </br>
             <p>Connect with me:</p>
