removing artist from header

--- a/writing.html
+++ b/writing.html
@@ -12,7 +12,7 @@
 <body>
         <div class = 'header'>
             <h1>Regan Willis</h1>
-            <h2>PROGRAMMER & ARTIST</h2>
+            <h2>PROGRAMMER</h2>
             <nav>
                 <ul><li><a href='index.html'>home</a></li></ul>
                 <ul><li><a href='#'>writing</a></li></ul>
