--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
         <div class = 'header'>
             <h1>Regan Willis</h1>
-            <h2>PROGRAMMER & ARTIST</h2>
+            <h2>PROGRAMMER</h2>
             <nav>
                 <ul><li><a href='#'>home</a></li></ul>
                 <ul><li><a href='about.html'>about</a></li></ul>
