updating home page

--- a/index.html
+++ b/index.html
@@ -7,43 +7,40 @@
     <!--PAGE TITLE-->
     <title>Regan Willis</title>
     <!--LINK TO CSS DOC-->
-    <link rel="stylesheet" type="text/css" href = 'https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/style.css'/>
+    <link rel="stylesheet" type="text/css" href = 'style.css'/>
 </head>
 <body>
         <div class = 'header'>
             <h1>Regan Willis</h1>
             <h2>PROGRAMMER</h2>
             <nav>
-                <ul><li><a href='#'>home</a></li></ul>
-                <ul><li><a href='writing.html'>writing</a></li></ul>
+                <ul id='curr-page'><li><a href='#'>home</a></li></ul>
+                <ul><li><a href='portfolio.html'>portfolio</a></li></ul>
             </nav>
         </div>
         <div class = 'content'>
             <div class='index-images'>
                 <img src = 'https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/images/me.jpg'>
             </div>
-            <h3>View My <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/Willis_Resume.pdf' target="_blank" rel="noopener noreferrer">Resume</a></h3>
             <p>
                 Hi, I'm Regan. I'm a programmer and artist interested in using computers to create 
                 human connections and improve our relationships with our digital selves.
-            </p>
-            <p>
-                I'm a Research Software Engineer at <a href='https://asset-us.com/'>ASSET, LLC.</a> where I work
+                I'm a Software Engineer at <a href='https://asset-us.com/'>ASSET, LLC.</a> where I work
                 on healthcare technology by augmenting internal systems, building web apps, and using machine
                 learning to find patterns in data.
-            </p>
-            <p>
-                I will graduate from the University of South Carolina in May 2021 with a Bachelor of Science 
-                in Computer Information Systems, a minor in Business Information Management and an Information Assurance Specialization.
+                I graduated from the University of South Carolina with a Bachelor of Science in Computer Information Systems, 
+                a minor in Business Information Management and an Information Assurance Specialization.
             </p>
         </br>
-            <p>Connect with me:</p>
-            <p>Email me at reganwillis@outlook.com</p>
-            <p><a href='https://github.com/reganwillis'>GitHub</a></p>
-            <p><a href='https://www.linkedin.com/in/regan-willis-software-developer/'>LinkedIn</a></p>
+            <ul>
+                <li>View my <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/Willis_Resume.pdf' target="_blank" rel="noopener noreferrer">resume</a></li>
+                <li>Email me: reganwillis@outlook.com</li>
+                <li><a href='https://github.com/reganwillis'>GitHub</a></li>
+                <li><a href='https://www.linkedin.com/in/regan-willis-software-developer/'>LinkedIn</a></li>
+            </ul>
         </div>
         <div class = 'footer'>
-            <p>Copyright Regan Willis 2020</p>
+            <p>Copyright Regan Willis 2021</p>
         </div>
 </body>
 </html>
