--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
                 <img src = 'https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/images/me.jpg'>
             </div>
             <p>
-                Hi, I'm Regan. I'm a programmer and artist interested in using computers to create 
-                human connections and improve our relationships with our digital selves.
-                I'm a Software Engineer at <a href='https://asset-us.com/'>ASSET, LLC.</a> where I work
-                on healthcare technology by augmenting internal systems, building web apps, and using machine
-                learning to find patterns in data.
+                Hi, I'm Regan. I'm a Software Engineer at <a href='https://asset-us.com/'>ASSET, LLC.</a> where I work
+                on healthcare technology by augmenting internal systems, building web apps, and implementing machine learning.
                 I graduated from the University of South Carolina with a Bachelor of Science in Computer Information Systems, 
                 a minor in Business Information Management and an Information Assurance Specialization.
             </p>
