updated bio after leaving ASSET

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <img src = 'https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/images/me.jpg'>
             </div>
             <p>
-                Hi, I'm Regan. I'm a Software Engineer at <a href='https://asset-us.com/'>ASSET, LLC.</a> where I work
-                on healthcare technology by augmenting internal systems, building web apps, and implementing machine learning.
+                Hi, I'm Regan. I'm a programmer interested in machine learning, blockchain technology, and augmenting internal
+                systems. I strive to create tools that are human-centered and value connection over divisiveness.
                 I graduated from the University of South Carolina with a Bachelor of Science in Computer Information Systems, 
                 a minor in Business Information Management and an Information Assurance Specialization.
             </p>
