--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Regan Willis</title>
     <!--LINK TO CSS DOC-->
     <link rel="stylesheet" type="text/css" href = 'style.css'/>
+    <link rel="stylesheet" type="text/css" href = 'index-style.css'/>
 </head>
 <body>
         <div class = 'header'>
             <h1>Regan Willis</h1>
-            <h2>PROGRAMMER</h2>
             <nav>
-                <ul id='curr-page'><li><a href='#'>home</a></li></ul>
-                <ul><li><a href='portfolio.html'>portfolio</a></li></ul>
+                <ul id ='curr-page'><li><a href='#'>HOME</a></li></ul>
+                <ul><li><a href='portfolio.html'>PORTFOLIO</a></li></ul>
             </nav>
         </div>
         <div class = 'content'>
@@ -24,7 +24,7 @@
             </div>
             <p>
                 Hi, I'm Regan. I'm a programmer interested in machine learning, blockchain technology, and augmenting internal
-                systems. I strive to create tools that are human-centered and value connection over divisiveness.
+                systems.
                 I graduated from the University of South Carolina with a Bachelor of Science in Computer Information Systems, 
                 a minor in Business Information Management and an Information Assurance Specialization.
             </p>
@@ -32,12 +32,12 @@
             <ul>
                 <li>View my <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/Willis_Resume.pdf' target="_blank" rel="noopener noreferrer">resume</a></li>
                 <li>Email me: reganwillis@outlook.com</li>
-                <li><a href='https://github.com/reganwillis'>GitHub</a></li>
-                <li><a href='https://www.linkedin.com/in/regan-willis-software-developer/'>LinkedIn</a></li>
+                <li>View my projects on <a href='https://github.com/reganwillis'>GitHub</a></li>
+                <li>Connect with me on <a href='https://www.linkedin.com/in/regan-willis-software-developer/'>LinkedIn</a></li>
             </ul>
         </div>
         <div class = 'footer'>
-            <p>Copyright Regan Willis 2021</p>
+            <p>last updated on 10-05-2021</p>
         </div>
 </body>
 </html>
