--- a/portfolio.html
+++ b/portfolio.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--PAGE TITLE-->
     <title>Regan Willis</title>
-    <!--LINK TO CSS DOC-->
+    <!--LINK TO CSS DOCS-->
     <link rel="stylesheet" type="text/css" href = 'style.css'/>
+    <link rel="stylesheet" type="text/css" href = 'portfolio-style.css'/>
 
 </head>
 <body>
     <div class = 'header'>
         <h1>Regan Willis</h1>
-        <h2>PROGRAMMER</h2>
         <nav>
-            <ul><li><a href='index.html'>home</a></li></ul>
-            <ul id='curr-page'><li><a href='#'>portfolio</a></li></ul>
+            <ul><li><a href='index.html'>HOME</a></li></ul>
+            <ul id ='curr-page'><li><a href='#'>PORTFOLIO</a></li></ul>
         </nav>
     </div>
     <div class = 'portfolio-container'>
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class = 'footer'>
-        <p>Copyright Regan Willis 2021</p>
+        <p>last updated on 10-05-2021</p>
     </div>
 </body>
 </html>
