updating homepage photo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class = 'content'>
             <div class='index-images'>
-                <img src = 'https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/images/me.jpg'>
+                <img src = 'https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/images/me2.jpg'>
             </div>
             <p>
                 Hi, I'm Regan. I'm a programmer interested in machine learning, blockchain technology, and augmenting internal
