new resume with plain text version

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             </p>
         </br>
             <ul>
-                <li>View my <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/Willis_Resume.pdf' target="_blank" rel="noopener noreferrer">resume</a></li>
+                <li>View my <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/Willis_Resume_2022.pdf' target="_blank" rel="noopener noreferrer">resume</a> (or see the <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/Willis_resume_plaintext.txt' target="_blank" rel="noopener noreferrer">plain text version</a>)</li>
                 <li>Email me: reganwillis@outlook.com</li>
                 <li>View my projects on <a href='https://github.com/reganwillis'>GitHub</a></li>
                 <li>Connect with me on <a href='https://www.linkedin.com/in/regan-willis-software-developer/'>LinkedIn</a></li>
             </ul>
         </div>
         <div class = 'footer'>
-            <p>last updated on 10-05-2021</p>
+            <p>last updated on 12-09-2021</p>
         </div>
 </body>
 </html>
