adding little flower and skeleton dapp to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,16 @@
     </div>
     <div class = 'portfolio-container'>
         <div class='portfolio-item'>
+            <p>Little Flower Game</p>
+            <img src='images/are-you-sure.png'>
+            <a href="https://reganwillis.github.io/Little-Flower/"><span></span></a>
+        </div>
+        <div class='portfolio-item'>
+            <p>Skeleton Dapp</p>
+            <img src='images/skeleton-dapp-2.jpg'>
+            <a href="https://github.com/reganwillis/Skeleton-Dapp"><span></span></a>
+        </div>
+        <div class='portfolio-item'>
             <p>Python Multiprocessing</p>
             <img src='images/multiprocessing-img.jpeg'>
             <a href="https://medium.com/@reganwillis/understanding-multiprocessing-with-python-b2a793be046b"><span></span></a>
