updating bio and profile picture

--- a/index.html
+++ b/index.html
@@ -19,25 +19,27 @@
             </nav>
         </div>
         <div class = 'content'>
-            <div class='index-images'>
-                <img src = 'https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/images/me2.jpg'>
-            </div>
-            <p>
-                Hi, I'm Regan. I'm a programmer interested in machine learning, blockchain technology, and augmenting internal
-                systems.
-                I graduated from the University of South Carolina with a Bachelor of Science in Computer Information Systems, 
-                a minor in Business Information Management and an Information Assurance Specialization.
-            </p>
+        	<div class='index-images'><img src = 'https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/images/me.jpeg'></div>
+		<p>
+               		Hi, I'm Regan. I'm a programmer with a focus in applied machine learning and a passion for writing readable code and amplifying
+			underrepresented voices in computer science.
+                	I graduated from the University of South Carolina in 2021 with a Bachelor of Science in Computer Information Systems, 
+                	a minor in Business Information Management and an Information Assurance Specialization.
+            	</p>
+		<p>
+			I work for <a href='https://www.integer-tech.com/'>Integer Technologies</a>, a government-contracted startup in Columbia, South Carolina, where I build perception system software for uncrewed surface vessels (USVs). I serve as the lead engineer in our company partnership with a SC HBCU consortium that aims to increase the number of Black computer science students earning engineering jobs after graduation.
+		</p>
         </br>
+	<h3>Connect With Me</h3>
             <ul>
-                <li>View my <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/Willis_Resume_2022.pdf' target="_blank" rel="noopener noreferrer">resume</a> (or see the <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/Willis_resume_plaintext.txt' target="_blank" rel="noopener noreferrer">plain text version</a>)</li>
+                <li>View my <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/CV_ReganWillis.pdf' target="_blank" rel="noopener noreferrer">resume</a></li>
                 <li>Email me: reganwillis@outlook.com</li>
                 <li>View my projects on <a href='https://github.com/reganwillis'>GitHub</a></li>
                 <li>Connect with me on <a href='https://www.linkedin.com/in/regan-willis-software-developer/'>LinkedIn</a></li>
             </ul>
         </div>
         <div class = 'footer'>
-            <p>last updated on 12-09-2021</p>
+            <p>last updated on 09-09-2023</p>
         </div>
 </body>
 </html>
