Added Github & LinkedIn Badges

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <ul>
                 <li>View my <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/CV_ReganWillis.pdf' target="_blank" rel="noopener noreferrer">resume</a></li>
                 <li>Email me: reganwillis@outlook.com</li>
-                <li>View my projects on <a href='https://github.com/reganwillis'>GitHub</a></li>
-                <li>Connect with me on <a href='https://www.linkedin.com/in/regan-willis-software-developer/'>LinkedIn</a></li>
+                <li><a href='https://github.com/reganwillis'><img alt="Static Badge" src="https://img.shields.io/badge/github-%23121011.svg?style=for-the-badge&logo=github&logoColor=white"></a></li>
+                <li><a href='https://www.linkedin.com/in/regan-willis-software-developer/'><img alt="Static Badge" src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"></a></li>
             </ul>
         </div>
         <div class = 'footer'>
