edit portfolio, adding research projects

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 	a minor in Business Information Management and an Information Assurance Specialization.
             	</p>
 		<p>
-			I work for <a href='https://www.integer-tech.com/'>Integer Technologies</a>, a government-contracted startup in Columbia, South Carolina, where I build perception system software for uncrewed surface vessels (USVs). I serve as the lead engineer in our company partnership with a SC HBCU consortium that aims to increase the number of Black computer science students earning engineering jobs after graduation.
+			I work for <a href='https://www.integer-tech.com/'>Integer Technologies</a>, a federal contractor startup in Columbia, South Carolina, where I build perception system software for uncrewed surface vessels (USVs). I serve as the lead engineer in our company partnership with a SC HBCU consortium that aims to increase the number of Black computer science students earning engineering jobs after graduation.
 		</p>
         </br>
 	<h3>Connect With Me</h3>
@@ -39,7 +39,7 @@
             </ul>
         </div>
         <div class = 'footer'>
-            <p>last updated on 09-09-2023</p>
+            <p>last updated on 11-10-2023</p>
         </div>
 </body>
 </html>
