--- a/portfolio.html
+++ b/portfolio.html
@@ -13,28 +13,15 @@
 </head>
 <body>
     <div class = 'header'>
-        <h1>Regan Willis</h1>
+        <h1>REGAN WILLIS</h1>
         <nav>
             <ul><li><a href='index.html'>HOME</a></li></ul>
             <ul id ='curr-page'><li><a href='#'>PORTFOLIO</a></li></ul>
         </nav>
     </div>
-	<h2>Research Projects</h2>
-	<div class = 'research-projects-container'>
-		<h3><u>Advanced Perception for Autonomous Platforms in the Littorals</u></h3>
-		<p><a href="https://www.highergov.com/contract/N0001423C1052/">Phase II Grant (BAA)</a> for the Office of Naval Research (ONR) awarded to the University of South Carolina and <a href="https://www.integer-tech.com/">Integer Technologies, LLC.</a></p>
-		<p>Performance Period: Aug. 2023 - Aug. 2026 | Participated: Aug. 2023 - present</p>
-		<h3><u>Reliable Perception for Unmanned Maritime Systems</u></h3>
-		<p><a href="https://www.highergov.com/contract/N0001422C1011/">Phase I Grant (BAA)</a> for the Office of Naval Research (ONR) awarded to the University of South Carolina and <a href="https://www.integer-tech.com/">Integer Technologies, LLC.</a></p>
-		<p>Performance Period: Nov. 2021 - Nov. 2024 | Particpated: Jul. 2022 - present</p>
-		<h3><u>Digital Twins for Navy Power and Energy Systems (NPES)</u></h3>
-		<p><a href="https://www.highergov.com/contract/N0001422C1003/">Phase I Grant (BAA)</a> for the Office of Naval Research (ONR) awarded to the University of South Carolina and <a href="https://www.integer-tech.com/">Integer Technologies, LLC.</a></p>
-		<p>Performance Period: Dec. 2021 - Dec. 2024 | Particpated: Dec. 2022 - Mar. 2023</p>
-		<h3><u>Mitigating Injurious Falls in Older Adults Through Non-Injurious Fall and Gait Analysis From Floor Vibrations</u></h3>
-		<p><a href="https://www.sbir.gov/node/1571805">Phase I STTR Grant</a> for the National Institutes of Health (NIH) awarded to <a href="https://www.asset-us.com/">Advanced Smart Systems and Evaluation Technologies (ASSET), LLC.</a> and the University of South Carolina.</p>
-		<p>Participated: Jan. 2020 - May 2021</p>
+	<div class='content'>
+		<h3>Personal Projects</h3>
 	</div>
-	<h2>Personal Projects</h2>
     <div class = 'portfolio-container'>
         <div class='portfolio-item'>
             <p>Little Flower Game</p>
@@ -63,7 +50,7 @@
         </div>
     </div>
     <div class = 'footer'>
-        <p>last updated on 11-10-2023</p>
+        <p>Last updated on 10-19-2024</p>
     </div>
 </body>
 </html>
