--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         <div class = 'header'>
-            <h1>Regan Willis</h1>
+            <h1>REGAN WILLIS</h1>
             <nav>
                 <ul id ='curr-page'><li><a href='#'>HOME</a></li></ul>
                 <ul><li><a href='portfolio.html'>PORTFOLIO</a></li></ul>
@@ -20,26 +20,24 @@
         </div>
         <div class = 'content'>
         	<div class='index-images'><img src = 'https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/images/me.jpeg'></div>
-		<p>
-               		Hi, I'm Regan. I'm a programmer with a focus in applied machine learning and a passion for writing readable code and amplifying
-			underrepresented voices in computer science.
-                	I graduated from the University of South Carolina in 2021 with a Bachelor of Science in Computer Information Systems, 
-                	a minor in Business Information Management and an Information Assurance Specialization.
-            	</p>
-		<p>
-			I work for <a href='https://www.integer-tech.com/'>Integer Technologies</a>, a federal contractor startup in Columbia, South Carolina, where I build perception system software for uncrewed surface vessels (USVs). I serve as the lead engineer in our company partnership with a SC HBCU consortium that aims to increase the number of Black computer science students earning engineering jobs after graduation.
-		</p>
-        </br>
-	<h3>Connect With Me</h3>
-            <ul>
-                <li>View my <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/CV_ReganWillis.pdf' target="_blank" rel="noopener noreferrer">resume</a></li>
-                <li>Email me: reganwillis@outlook.com</li>
-                <li>View my projects on <a href='https://github.com/reganwillis'>GitHub</a></li>
-                <li>Connect with me on <a href='https://www.linkedin.com/in/regan-willis-software-developer/'>LinkedIn</a></li>
-            </ul>
+			<h3>Bio</h3>
+			<p>
+               		Hi, I'm Regan. I'm a programmer with a focus in applied machine learning. I'm a Master's student studying Computer Science at the University of South Carolina. I'm a Research Assistant at the Heterogeneous and Reconfigurable Computing (HeRC) Lab.
+            </p>
+            <p>
+			I work for <a href='https://www.integer-tech.com/'>Integer Technologies</a>, a DoD contractor in Columbia, South Carolina, where I build perception system software for uncrewed surface vessels (USVs).
+			</p>
+        	</br>
+			<h3>Connect With Me</h3>
+            	<ul>
+                	<li>View my <a href='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/CV_ReganWillis.pdf' target="_blank" rel="noopener noreferrer">resume</a></li>
+                	<li>Email me: reganwillis@outlook.com</li>
+                	<li>View my projects on <a href='https://github.com/reganwillis'>GitHub</a></li>
+                	<li>Connect with me on <a href='https://www.linkedin.com/in/regan-willis-software-developer/'>LinkedIn</a></li>
+            	</ul>
         </div>
         <div class = 'footer'>
-            <p>last updated on 11-10-2023</p>
+            <p>Last updated on 10-19-2024</p>
         </div>
 </body>
 </html>
