updated bio, added more projects

--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
 </head>
 <body>
         <div class = 'header'>
-            <h1>REGAN WILLIS</h1>
+            <h1>Regan Willis</h1>
             <nav>
-                <ul id ='curr-page'><li><a href='#'>HOME</a></li></ul>
-                <ul><li><a href='portfolio.html'>PORTFOLIO</a></li></ul>
+                <ul id ='curr-page'><li><a href='#'>Home</a></li></ul>
+                <ul><li><a href='portfolio.html'>Projects</a></li></ul>
             </nav>
         </div>
         <div class = 'content'>
-        	<div class='index-images'><img src = 'https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/images/me.jpeg'></div>
+        	<div class='index-images'><img src='https://s3.us-east-2.amazonaws.com/reganwillis-softwaredeveloper.com/images/me.jpeg'></div>
+            <p><b>Senior Software Engineer, Computer Science M.S. Student</b></p>
 			<h3>Bio</h3>
 			<p>
-               		Hi, I'm Regan. I'm a programmer with a focus in applied machine learning. I'm a Master's student studying Computer Science at the University of South Carolina. I'm a Research Assistant at the Heterogeneous and Reconfigurable Computing (HeRC) Lab.
+               		I am a programmer with a focus in applied machine learning based in Columbia, South Carolina. I study Computer Science at the University of South Carolina and work in the <a href='https://cse.sc.edu/~jbakos/group/'>Heterogeneous and Reconfigurable Computing (HeRC) Lab</a>.
             </p>
             <p>
-			I work for <a href='https://www.integer-tech.com/'>Integer Technologies</a>, a DoD contractor in Columbia, South Carolina, where I build perception system software for uncrewed surface vessels (USVs).
+			I am a Senior Software Engineer at <a href='https://www.integer-tech.com/'>Integer Technologies</a> building perception system software for uncrewed surface vessels (USVs).
 			</p>
         	</br>
 			<h3>Connect With Me</h3>
@@ -37,7 +38,7 @@
             	</ul>
         </div>
         <div class = 'footer'>
-            <p>Last updated on 10-19-2024</p>
+            <p>Last updated on 04-26-2025</p>
         </div>
 </body>
 </html>
