--- a/portfolio.html
+++ b/portfolio.html
@@ -13,16 +13,28 @@
 </head>
 <body>
     <div class = 'header'>
-        <h1>REGAN WILLIS</h1>
+        <h1>Regan Willis</h1>
         <nav>
-            <ul><li><a href='index.html'>HOME</a></li></ul>
-            <ul id ='curr-page'><li><a href='#'>PORTFOLIO</a></li></ul>
+            <ul><li><a href='index.html'>Home</a></li></ul>
+            <ul id ='curr-page'><li><a href='#'>Projects</a></li></ul>
         </nav>
     </div>
-	<div class='content'>
-		<h3>Personal Projects</h3>
-	</div>
     <div class = 'portfolio-container'>
+        <div class='portfolio-item'>
+            <p>Sentiment Analysis</p>
+            <img src='images/vibecheckdemo.jpg'>
+            <a href="https://github.com/reganwillis/BERT-Sentiment-Analysis-at-the-Edge/tree/main"><span></span></a>
+        </div>
+        <div class='portfolio-item'>
+            <p>Face Detector</p>
+            <img src='images/facedetector.jpg'>
+            <a href="https://github.com/reganwillis/Latency-Experiment/tree/main"><span></span></a>
+        </div>
+        <div class='portfolio-item'>
+            <p>MIPS Assembly Dot Product</p>
+            <img src='images/mars.jpg'>
+            <a href="https://github.com/reganwillis/Assembly-Dot-Product/tree/main"><span></span></a>
+        </div>
         <div class='portfolio-item'>
             <p>Little Flower Game</p>
             <img src='images/playing.png'>
@@ -50,7 +62,7 @@
         </div>
     </div>
     <div class = 'footer'>
-        <p>Last updated on 10-19-2024</p>
+        <p>Last updated on 04-26-2025</p>
     </div>
 </body>
 </html>
